--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Carrusel</title>
+    <title>7 Days in Hell | Bienvenidos al Infierno</title>
     <link rel="stylesheet" type="text/css" href="css/css.css" />
     <link
       rel="stylesheet"
