commit-extra-texto

--- a/src/index.html
+++ b/src/index.html
@@ -142,7 +142,7 @@
                 <p>
                   Hasta la fecha, ningún alma desafortunada ha sido capaz de
                   atravesar sus defensas. El Alma Errante necesitará de todas
-                  sus habilidades para poder superar sus defensas.
+                  sus habilidades para poder superar el desafio que presenta.
                 </p>
               </div>
             </div>
