atributo src puesto

--- a/src/index.html
+++ b/src/index.html
@@ -162,6 +162,7 @@
               alt="Imagen 1"
               class="img"
               loading="lazy"
+              srcset="assets/img/1.jpg 1x, assets/img/1-06x.jpg 0.6x, assets/img/1-03x.jpg 0.3x"
             />
           </a>
         </li>
@@ -172,6 +173,7 @@
               alt="Imagen 2"
               class="img"
               loading="lazy"
+              srcset="assets/img/2.jpg 1x, assets/img/2-06x.jpg 0.6x, assets/img/2-03x.jpg 0.3x"
             />
           </a>
         </li>
@@ -182,6 +184,7 @@
               alt="Imagen 3"
               class="img"
               loading="lazy"
+              srcset="assets/img/3.jpg 1x, assets/img/3-06x.jpg 0.6x, assets/img/3-03x.jpg 0.3x"
             />
           </a>
         </li>
@@ -192,6 +195,7 @@
               alt="Imagen 4"
               class="img"
               loading="lazy"
+              srcset="assets/img/4.jpg 1x, assets/img/4-06x.jpg 0.6x, assets/img/4-03x.jpg 0.3x"
             />
           </a>
         </li>
